fix(font-size): bigger font size on mobile

--- a/app/assets/stylesheets/elements/_section-title.scss
+++ b/app/assets/stylesheets/elements/_section-title.scss
@@ -8,7 +8,7 @@
 
   &.mobile {
     text-transform: uppercase;
-    font-size: rem(14px);
+    font-size: rem(16px);
     font-weight: 500;
     text-align: center;
   }
